<resources>
    <string name="app_name">Cemetery Grave Locator</string>
    <string name="name">Name (required)</string>
    <string name="birth_date">Birth date (required)</string>
    <string name="death_date">Death date (required)</string>
    <string name="location">Location:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="photo">Photo:</string>
    <string name="save">Save</string>
    <string name="edit">edit</string>
    <string name="set_location">This location will be set as grave location.</string>
    <string name="ok_capital">OK</string>
    <string name="no_location_services_title">No services!</string>
    <string name="no_location_services">Application can\'t find your current location. Please enable location services and try again.</string>
    <string name="set">Set</string>
    <string name="new_location_set">New location has been set.</string>
    <string name="select_img">Select image</string>
    <string name="saving_error">Saving error!</string>
    <string name="error_empty_text_boxes">One or more of required text boxes is empty. Please fill them with content.</string>
    <string name="error_birth_bad_format">Wrong format of birth date. Data should be in format: DD.MM.YY</string>
    <string name="error_death_bad_format">Wrong format of death date. Data should be in format: DD.MM.YY</string>
    <string name="wait_loading">Loading. Please wait...</string>
    <string name="note">Note</string>
    <string name="note_colon">Note:</string>
    <string name="search">Search</string>
    <string name="press_back_button_to_exit">Press back button again to exit.</string>
    <string name="settings">Settings</string>
    <string name="category_map">Map category:</string>
    <string name="map_provider">Map provider</string>
    <string name="category_main_screen">Main screen category:</string>
    <string name="switch_show_snackbar">Show snackbar</string>
    <string name="item_removed">Grave has been removed.</string>
    <string name="item_added">Grave has been added.</string>
    <string name="undo_upper">UNDO</string>
    <string name="photo_of_grave">Photo of grave.</string>
    <string name="circle_initials">Circle with initials.</string>
    <string name="import_export">Import/Export</string>
    <string name="close_app">Exit</string>


    <string name="transition_name">_transition_name</string>
    <string name="transition_date">_transition_date</string>
    <string name="transition_floating_button">_floating_button</string>
    
    
    <string-array name="maps_providers_array">
        <item>CYCLEMAP</item>
        <item>BASE OVERLAY NL</item>
        <item>HIKEBIKEMAP</item>
        <item>MAPNIK</item>
        <item>USGS SAT</item>
    </string-array>
    <string-array name="maps_providers_array_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
