<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_searcher"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_import_export"
        android:title="@string/import_export"
        app:showAsAction="never" />

    <item android:id="@+id/menu_close_app"
        android:title="@string/close_app"
        app:showAsAction="never" />

</menu>