<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_grave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.jakubbilinski.cemeterygravelocator.AddGraveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:id="@+id/editTextName"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_date"
                android:inputType="date"
                android:id="@+id/editTextBirth"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/death_date"
                android:inputType="date"
                android:id="@+id/editTextDeath"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                android:id="@+id/editTextNote"
                android:inputType="textMultiLine"/>
        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:text="@string/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLocation"
            android:textSize="20sp" />

        <TextView
            android:text="@string/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLatitude" />

        <TextView
            android:text="@string/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLongitude" />

        <Button
            android:text="@string/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEditLocation"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <TextView
            android:text="@string/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPhoto"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/replace"
            android:id="@+id/imageViewPhoto"
            android:scaleType="centerInside"
            android:layout_height="200dp"
            android:contentDescription="@string/photo_of_grave" />

        <Button
            android:text="@string/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEditPhoto"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

    </LinearLayout>
</ScrollView>
